--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/node_modules*
 /.pnp
 .pnp.js
 
@@ -18,6 +18,8 @@
 .env.test.local
 .env.production.local
 .env
+
+ganache.accounts
 
 npm-debug.log*
 yarn-debug.log*
