--- a/client/package.json
+++ b/client/package.json
@@ -7,14 +7,15 @@
     "@truffle/contract": "^4.1.5",
     "bootstrap": "^4.4.1",
     "eslint-plugin-import": "^2.20.0",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
-    "react-scripts": "3.2.0",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
     "reactstrap": "^8.4.0",
     "web3": "1.2.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "./node_modules/.bin/react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
